Share the Ride project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="navigation_drawer_close">Navigation menu closed</string>
     <string name="header_title">Header Title</string>
     <string name="title_click">Title Click</string>
-    <string name="menu_camera">Camera</string>
+    <string name="menu_trips">Trip list</string>
+    <string name="menu_create_trip">Create a trip</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_login">Login</string>
